--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/_material-theme.scss"
             ],
             "scripts": []
           },
@@ -118,7 +119,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/_material-theme.scss"
             ],
             "scripts": []
           }
